update docker image

--- a/sample-deploy/manifests/helm-app/templates/deployment.yaml
+++ b/sample-deploy/manifests/helm-app/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: myserver
     spec:
       containers:
-      - image: espirado/saramiscore
+      - image: espirado/kokotest
         name: myserver
         imagePullPolicy: IfNotPresent
         ports:
